--- a/.env
+++ b/.env
@@ -26,7 +26,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=practica2
 DB_USERNAME=root
-DB_PASSWORD=Rellenitoal100%
+DB_PASSWORD=cdutc345
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
