--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=practica2
-DB_USERNAME=root
+DB_USERNAME=db21345
 DB_PASSWORD=cdutc345
 
 SESSION_DRIVER=database
